<resources>
    <string name="app_name">FrontCovid</string>
    <string name="login_hint">Введите логин</string>
    <string name="login_btn">ВОЙТИ</string>
    <string name="password_hint">Введите пароль</string>
    <string name="authorization">Авторизация</string>
    <string name="please_wait">Пожалуйста подождите....</string>
    <string name="loading_data">Загрузка данных</string>
    <string name="authorisation_Error">Ошибка авторазации</string>
    <string name="falien_connect">Ошибка соединенения с сервером</string>
    <string name="contact">Контактов:</string>
    <string name="_0">0</string>
    <string name="measurement_date">Дата замера</string>
    <string name="reconnect">Переподключиться</string>
    <string name="incorrect_date_and_time_of_measurement">Не верная дата и время замера</string>
    <string name="temperature">Температура</string>
    <string name="add">Добавить</string>
    <string name="where_did_they_contact">Где контактировали, место контакта</string>
    <string name="fio_contact">ФИО контакта</string>
    <string name="add_contackt">Добавить контакт</string>
    <string name="error">Ошибка</string>
    <string name="measurements">Замеры</string>
    <string name="contackt">Контакты</string>
    <string name="settings">Настройки</string>
    <string name="measurement_time">Время замера</string>
    <string name="healthy">Здоров</string>
    <string name="sick">Болен</string>
    <string name="work">Работа</string>
    <string name="friends">Друзья</string>
    <string name="family">Семья</string>
    <string name="contacts">Контакты</string>
    <string name="save">Сохранить</string>
    <string name="saved_successfully">Успешно сохранено</string>
    <string name="exit">Выход</string>
    <string name="other">Другие</string>
    <string name="measurement_creation">Создание замера</string>
    <string name="temperature_measurement_not_added">Не добавлен замер температуры</string>
</resources>