<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/backgraudn_feed">

    <TextView
        android:id="@+id/textViewFIOContackt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/fio_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFIOContackt"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textViewFIOContackt"
        app:layout_constraintTop_toBottomOf="@+id/textViewFIOContackt" />

    <CheckBox
        android:id="@+id/checkBoxStateContackt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthy"
        app:layout_constraintStart_toStartOf="@+id/editTextFIOContackt"
        app:layout_constraintTop_toBottomOf="@+id/editTextFIOContackt" />

    <Button
        android:id="@+id/btnAddContactContackt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/editTextFIOContackt"
        app:layout_constraintStart_toStartOf="@+id/editTextFIOContackt"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxStateContackt" />
</androidx.constraintlayout.widget.ConstraintLayout>