<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootJob"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textViewFIO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fio_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextFIO"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/textViewFIO"
                app:layout_constraintTop_toBottomOf="@+id/textViewFIO" />

            <TextView
                android:id="@+id/textViewWhereDidYouContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/where_did_they_contact"
                app:layout_constraintStart_toStartOf="@+id/editTextFIO"
                app:layout_constraintTop_toBottomOf="@+id/editTextFIO" />

            <EditText
                android:id="@+id/editTextWhereDidYouContact"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/textViewWhereDidYouContact"
                app:layout_constraintTop_toBottomOf="@+id/textViewWhereDidYouContact" />

            <Button
                android:id="@+id/btnAddContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_contackt"
                app:layout_constraintStart_toStartOf="@+id/editTextWhereDidYouContact"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxState" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items_container_job"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddContact" />

            <CheckBox
                android:id="@+id/checkBoxState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/healthy"
                app:layout_constraintStart_toStartOf="@+id/editTextWhereDidYouContact"
                app:layout_constraintTop_toBottomOf="@+id/editTextWhereDidYouContact" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>