<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootJob"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textViewFIOOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fio_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextFIOOther"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/textViewFIOOther"
                app:layout_constraintTop_toBottomOf="@+id/textViewFIOOther" />

            <TextView
                android:id="@+id/textViewWhereDidYouContactOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/where_did_they_contact"
                app:layout_constraintStart_toStartOf="@+id/editTextFIOOther"
                app:layout_constraintTop_toBottomOf="@+id/editTextFIOOther" />

            <EditText
                android:id="@+id/editTextWhereDidYouContactOther"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/textViewWhereDidYouContactOther"
                app:layout_constraintTop_toBottomOf="@+id/textViewWhereDidYouContactOther" />

            <Button
                android:id="@+id/btnAddContactOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_contackt"
                app:layout_constraintStart_toStartOf="@+id/editTextWhereDidYouContactOther"
                app:layout_constraintTop_toBottomOf="@+id/editTextWhereDidYouContactOther" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items_container_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddContactOther" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>